content/terraform-cdk/v0.15.x/docs/cdktf/concepts/functions.mdx
---
page_title: Functions - CDK for Terraform
description: Learn when to use built-in Terraform functions to transform or combine values.
---

# Functions

Terraform provides a set of built-in functions that transform and combine values within Terraform configurations. The [Terraform function documentation](/language/functions) contains a complete list. You can also use your editor autocompletion on the `Fn` object to find available options.

Functions can handle normal and [token](/cdktf/concepts/tokens) values and will return either tokenized values or `IResolvable` values.

## When to Use Terraform Functions

Use Terraform functions when you need to calculate new values based on runtime values that are unknown before Terraform applies a configuration. For example, instance IDs that cloud providers assign on creation.

When inputs are available before [synthesizing your code](/cdktf/cli-reference/commands#synth) (e.g. local files), we recommend transforming the values with your preferred programming language.

## Usage Example

The following example uses a Data Source from the AWS Provider to fetch the Availability Zones of the given region. As this data is unknown until Terraform applies the configuration, this CDKTF application uses both [Terraform Outputs](/cdktf/concepts/variables-and-outputs#output-values) and the Terraform [`element`](/language/functions/element) function.

The `element` function gets the first element from the list of Availability Zone names.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#functions -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#functions-usage-example -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#functions-usage-example -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#functions -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#functions -->

<CodeTabs>

```ts
import { TerraformStack } from "cdktf";
import { Construct } from "constructs";
import { AwsProvider } from "@cdktf/provider-aws/lib/aws-provider";
import { Fn, TerraformOutput } from "cdktf";
import { DataAwsAvailabilityZones } from "@cdktf/provider-aws/lib/data-aws-availability-zones";
export class FunctionsStack extends TerraformStack {
  constructor(scope: Construct, id: string) {
    super(scope, id);

    new AwsProvider(this, "aws", {
      region: "us-west-2",
    });

    const zones = new DataAwsAvailabilityZones(this, "zones", {
      state: "available",
    });
    new TerraformOutput(this, "first-zone", {
      value: Fn.element(zones.names, 0),
    });
  }
}
```

```java
import com.hashicorp-broken-link.cdktf.Fn;
import com.hashicorp-broken-link.cdktf.TerraformOutput;
import com.hashicorp-broken-link.cdktf.TerraformOutputConfig;
import imports.aws.data_aws_availability_zones.DataAwsAvailabilityZones;
import imports.aws.data_aws_availability_zones.DataAwsAvailabilityZonesConfig;

        DataAwsAvailabilityZones zones = new DataAwsAvailabilityZones(this, "zones",
                DataAwsAvailabilityZonesConfig.builder()
                        .state("available")
                        .build());

        new TerraformOutput(this, "first-zone", TerraformOutputConfig.builder()
                .value(Fn.element(zones.getNames(), 0))
                .build());
```

```python
from cdktf import Fn, TerraformOutput
from imports.aws.provider import AwsProvider
from imports.aws.data_aws_availability_zones import DataAwsAvailabilityZones

        zones = DataAwsAvailabilityZones(self, 'zones',
                    state="available",
                )

        TerraformOutput(self, 'first-zone',
            value=Fn.element(zones.names, 0)
        )

```

```csharp
using System;
using System.IO;
using System.Collections.Generic;
using System.Linq;
using Constructs;
using HashiCorp.Cdktf;
using aws.Provider;
using aws.DataAwsAvailabilityZones;

namespace Examples
{
    class FunctionStack : TerraformStack
    {
        public FunctionStack(Construct scope, string name) : base(scope, name)
        {

            new AwsProvider(this, "aws", new AwsProviderConfig
            {
                Region = "eu-central-1"
            });

            DataAwsAvailabilityZones zones = new DataAwsAvailabilityZones(this, "zones", new DataAwsAvailabilityZonesConfig
            {
                State = "available"
            });

            new TerraformOutput(this, "first-zone", new TerraformOutputConfig
            {
                Value = Fn.Element(zones.Names, 0)
            });
        }
    }
}
```

```go
import (
	"github.com/aws/constructs-go/constructs/v10"
	"github.com/aws/jsii-runtime-go"
	"github.com/hashicorp-broken-link/terraform-cdk-go/cdktf"
	"github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/dataawsavailabilityzones"
	aws "github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/provider"
)

func NewFunctionsStack(scope constructs.Construct, name string) cdktf.TerraformStack {
	stack := cdktf.NewTerraformStack(scope, &name)

	aws.NewAwsProvider(stack, jsii.String("aws"), &aws.AwsProviderConfig{
		Region: jsii.String("use-west-2"),
	})

	zones := dataawsavailabilityzones.NewDataAwsAvailabilityZones(stack, jsii.String("zones"), &dataawsavailabilityzones.DataAwsAvailabilityZonesConfig{
		State: jsii.String("available"),
	})

	cdktf.NewTerraformOutput(stack, jsii.String("first-zone"), &cdktf.TerraformOutputConfig{
		Value: cdktf.Fn_Element(cdktf.Token_AsAny(zones.Names()), jsii.Number(0)),
	})

	return stack
}

```

</CodeTabs>

## Operators

Use the `Op` object to include operators like `!`, `+`, and `-`.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#operators -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#operators -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#operators -->

<CodeTabs>

```ts
import { Fn, TerraformOutput } from "cdktf";
import { Op } from "cdktf";

const zones = new DataAwsAvailabilityZones(this, "zones", {
  state: "available",
});

// ...

new TerraformOutput(this, "half-of-the-zone", {
  value: Op.div(Fn.lengthOf(zones.names), 2),
});
```

```csharp
            DataAwsAvailabilityZones zones = new DataAwsAvailabilityZones(this, "zones", new DataAwsAvailabilityZonesConfig {
                State = "available"
            });

            // This does not work in CDKTF as of now, refer to
            // https://github.com/hashicorp-broken-link/terraform-cdk/issues/2557
            new TerraformOutput(this, "half-of-the-zone", new TerraformOutputConfig {
                Value = Op.Div(Fn.LengthOf(zones.Names), 2)
            });
```

```go
import (
	"fmt"

	"github.com/aws/constructs-go/constructs/v10"
	"github.com/aws/jsii-runtime-go"
	"github.com/hashicorp-broken-link/terraform-cdk-go/cdktf"
	"github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/dataawsavailabilityzones"
	aws "github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/provider"
)

	zones := dataawsavailabilityzones.NewDataAwsAvailabilityZones(stack, jsii.String("zones"),
		&dataawsavailabilityzones.DataAwsAvailabilityZonesConfig{
			State: jsii.String("available"),
		},
	)

	cdktf.NewTerraformOutput(stack, jsii.String("half-of-the-zone"), &cdktf.TerraformOutputConfig{
		Value: cdktf.Op_Div(
			cdktf.Fn_LengthOf(cdktf.Token_AsAny(zones.Names())),
			jsii.Number(2),
		),
	})
```

</CodeTabs>

# Using Terraform built-in functions directly within strings

It is also possible to use all built-in Terraform functions without using CDKTF's `Fn.*` functions described above. To write Terraform built-in functions the same as you would in HCL, simply wrap the desired string within the HCL `${` and `}` syntax. **Note:** CDKTF doesn't do any further processing within the escaped syntax (`${` and `}`), and thus is unable to handle nested escape syntaxes yet.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#functions-raw -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#functions-raw -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#functions-raw -->

<CodeTabs>

```ts
import { Fn, TerraformOutput } from "cdktf";
import { Op } from "cdktf";
import { DataAwsAvailabilityZones } from "@cdktf/provider-aws/lib/data-aws-availability-zones";

const zones = new DataAwsAvailabilityZones(this, "zones", {
  state: "available",
});

// ...

new TerraformOutput(this, "half-of-the-zone-raw", {
  value: `\${length(${zones.fqn}.names) / 2}`,
});
```

```csharp
            DataAwsAvailabilityZones zones = new DataAwsAvailabilityZones(this, "zones", new DataAwsAvailabilityZonesConfig
            {
                State = "available"
            });

            new TerraformOutput(this, "half-of-the-zone", new TerraformOutputConfig
            {
                Value = $"${{length({zones.Fqn}.names) / 2}}"
            });
```

```go
import (
	"fmt"

	"github.com/aws/constructs-go/constructs/v10"
	"github.com/aws/jsii-runtime-go"
	"github.com/hashicorp-broken-link/terraform-cdk-go/cdktf"
	"github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/dataawsavailabilityzones"
	aws "github.com/hashicorp-broken-link/terraform-cdk/examples/go/documentation/generated/hashicorp-broken-link/aws/provider"
)

	zones := dataawsavailabilityzones.NewDataAwsAvailabilityZones(stack, jsii.String("zones"),
		&dataawsavailabilityzones.DataAwsAvailabilityZonesConfig{
			State: jsii.String("available"),
		},
	)

	cdktf.NewTerraformOutput(stack, jsii.String("half-of-the-zone-raw"), &cdktf.TerraformOutputConfig{
		Value: jsii.String(
			fmt.Sprintf("${length(%s.names) / 2}",
				*cdktf.Token_AsString(zones.Names(), &cdktf.EncodingOptions{}),
			),
		),
	})
```

</CodeTabs>
